2007-03-02 [iwkse]	0.2.0cvs17

	* src/poppler_viewer.c
		remove num_pages label

2007-03-02 [iwkse]	0.2.0cvs16

	* src/poppler_viewer.c
		moved GTK_EVENTS_FLUSH() after gchar *page_str
		for BSD friends:) thanks to colin

2007-03-02 [iwkse]	0.2.0cvs15

	* src/poppler_viewer.c
		spinbutton bug fixed.

2007-03-02 [iwkse]	0.2.0cvs14

	* src/poppler_viewer.c
		arrange jump page buttons
		remove redundant code in
		poppler_pdf_view_update

2007-03-02 [colin]	0.2.0cvs13

	* src/poppler_viewer.c
		Fix going back to first page on reload

2007-03-02 [colin]	0.2.0cvs12

	* src/poppler_viewer.c
		Fix double increment - don't use 
		gtk_spin_button_set_value from the 
		value-changed callback, this confuses
		the spinbtn

2007-03-02 [iwkse]	0.2.0cvs11

	* src/poppler_viewer.c
		Add a spinner and remove
		the entry for page change.
		renamed some function.
		thanks to ticho for the hint;)

2007-03-02 [wwp]	0.2.0cvs10

	* src/poppler_viewer.c
		Set busy cursor when loading PS/PDF document.

2007-03-02 [iwkse]	0.2.0cvs9

	* src/poppler_viewer.c
		removed noticeview include header
		which isn't more used.

2007-03-02 [iwkse]	0.2.0cvs8

	* AUTHORS
		fix email address

2007-03-01 [wwp]	0.2.0cvs7

	* src/poppler_viewer.c
		Make a variable static, add a missing newline to g_warning,
		make labels padding using gtk_misc_set_padding() instead of
		with a white space (even better for translation).

2007-03-01 [colin]	0.2.0cvs6

	* src/poppler_viewer.c
		Fix invalid g_free()s - Sorry 
		for the bad advice :)
		Mark poppler_get_document_info_mode()
		and poppler_get_document_info_layout()
		const to avoid reintroducing this one

2007-03-01 [iwkse]	0.2.0cvs5

	* src/poppler_viewer.c
		rotate and info added.
		updated my new mail;)

2007-02-27 [colin]	0.2.0cvs4

	* src/Makefile.am
	* src/doc_info.xpm
		Add doc_info icon

2007-02-27 [colin]	0.2.0cvs3

	* src/Makefile.am
	* src/rotate_left.xpm
	* src/rotate_right.xpm
		Add rotate icons

2007-02-27 [paul]	0.2.0cvs2

	* src/poppler_viewer.c