@@ -21,3 +21,4 @@
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/poppler_viewer.c;  ) > 0.2.0cvs15.patchset
 ( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/poppler_viewer.c;  ) > 0.2.0cvs16.patchset
 ( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/poppler_viewer.c;  ) > 0.2.0cvs17.patchset
+( cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/poppler_viewer.c;  ) > 0.2.0cvs18.patchset
