@@ -1,3 +1,9 @@
+2007-03-03 [wwp]	0.2.0cvs18
+
+	* src/poppler_viewer.c
+		Add filename and size to the (i)nfo dialog. Use a macro to
+		simplify the (i)info dialog table/widgetset adding.
+
 2007-03-02 [iwkse]	0.2.0cvs17
 
 	* src/poppler_viewer.c
